GearsetPOC/force-app/main/default/objects/Work_Item__c/Work_Item__c.object-meta.xml
<CustomObject>
    <label>Work Item</label>
    <nameField>
        <displayFormat>WI-{00000}</displayFormat>
        <label>Work Items Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>