GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Active_User__c.field-meta.xml
<CustomField>
    <fullName>Active_User__c</fullName>
    <formula>Advisor_Name__r.IsActive = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User</label>
    <type>Checkbox</type>
</CustomField>