GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>