GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Blue_Green_Voucher_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Blue_Green_Voucher_Booking_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blue &amp; Green Voucher Booking Reference</label>
    <referenceTo>Blue_Green_Voucher_Bookings__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>