GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <formula>Text(Case_Number__r.Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Origin</label>
    <type>Text</type>
</CustomField>