GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <formula>Value(Mid(Text(CreatedDate), 12,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>