GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Fault_Log_Reference__c.field-meta.xml
<CustomField>
    <fullName>Fault_Log_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fault Log Reference</label>
    <referenceTo>Fault_Logging__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>