GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Insurance_Refund_Reference__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Refund_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Refund Reference</label>
    <referenceTo>Insurance_Refund_Form__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>