GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Sense_of_Occasion_Reference__c.field-meta.xml
<CustomField>
    <fullName>Sense_of_Occasion_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sense of Occasion Reference</label>
    <referenceTo>Sense_of_Occasion_Product__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>