GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue &amp; Green Voucher Booking</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>CS Letter</fullName>
            </value>
            <value>
                <fullName>Fault Log</fullName>
            </value>
            <value>
                <fullName>Insurance Refund</fullName>
            </value>
            <value>
                <fullName>Sense of Occasion</fullName>
            </value>
            <value>
                <fullName>Voucher Booking</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Write Off/Service Fee Override</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>