GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Voucher_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Booking_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher Booking Reference</label>
    <referenceTo>Voucher_Booking__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>