GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Webhelp_Related__c.field-meta.xml
<CustomField>
    <fullName>Webhelp_Related__c</fullName>
    <formula>CreatedBy.CompanyName = &quot;Webhelp&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Webhelp Related</label>
    <type>Checkbox</type>
</CustomField>