GearsetPOC/force-app/main/default/objects/Work_Item__c/fields/Write_Off_Service_Fee_Override_Ref__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Service_Fee_Override_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Write Off / Service Fee Override Ref</label>
    <referenceTo>Write_Off_Service_Fee_Override__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>